[JE2-218] Set Inter font-family for the app

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,8 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 @import "tailwindcss";
 @import "tw-animate-css";
-@import 'react-day-picker/style.css';
-
+@import "react-day-picker/style.css";
 @custom-variant dark (&:is(.dark *));
+
+.font-sans {
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
 
 @theme inline {
   --radius-sm: calc(var(--radius) - 4px);
@@ -139,7 +145,7 @@
   --rdp-accent-color: var(--muted-foreground) !important;
   --rdp-day-height: 33px;
   --rdp-day-width: 33px;
-  --rdp-day_button-height:30px;
+  --rdp-day_button-height: 30px;
   --rdp-day_button-width: 30px;
   --rdp-day_button-border-radius: 20%;
   --rdp-selected-font-weight: normal;
@@ -150,16 +156,19 @@
   padding-left: 10px;
 }
 
-.rdp-root .rdp-range_middle{
+.rdp-root .rdp-range_middle {
   font-weight: normal;
   font-size: medium;
 }
+
 .rdp-root .rdp-range_start {
   font-weight: normal;
 }
+
 .rdp-root .rdp-range_end {
   font-weight: normal;
 }
- .rdp-root .rdp-day_button{
-   margin: 2px;
- }
+
+.rdp-root .rdp-day_button {
+  margin: 2px;
+}
